# artificial-will-game

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  CODE_REVIEW.md  LICENSE  README.md  artificial-will-game.code-workspace  vcpkg.json
.claude/: settings.local.json
components/cute_c2/: CMakeLists.txt
components/engine-core/: _CMakeLists.txt
components/microlog/include/: ulog.h
components/microlog/src/: ulog.c
include/: ulog.h  ulog_config.h
src/: Animation.hpp  Drawable.hpp  Input.hpp  Renderer.hpp  Texture.hpp  Window.hpp  cute_c2_impl.cpp  main.cpp  ulog.c
src/WillEngine/: Animation.hpp  Drawable.hpp  Game.hpp  Input.hpp  Point2d.hpp  Position.hpp  Renderer.hpp  Size.hpp  Size3d.hpp  Texture.hpp  TileMap.hpp  Window.hpp  World.hpp
src/WillEngine/containers/: Geometry.hpp  Shapes.hpp  TextureAtlas.hpp
src/WillEngine/entity_components/: ComponentCollider.hpp  ComponentGeometry.hpp  ComponentInput.hpp  ComponentObject.hpp  ComponentPlayer.hpp  ComponentSIgnalInput.hpp  ComponentTexture.hpp  Size.hpp  Texture.hpp
src/WillEngine/systems/: AssetManager.hpp  BaseStateMashine.hpp  BaseSystem.hpp  Camera.hpp  IStateMashine.hpp  Input.hpp  MovementAndCollision.hpp  Renderer.hpp  Rendering.hpp  StateController.hpp  SystemCamera.hpp  SystemInput.hpp  SystemMovementAndCollision.hpp  SystemRendering.hpp  SystemState.hpp
src/WillEngine/world/: CameraState.hpp  TileMap.hpp  World.hpp
src/WillEngine/world/entity_components/: ComponentCollider.hpp  ComponentInput.hpp  ComponentPhysical.hpp  ComponentSprite.hpp  ComponentState.hpp
src/engine/: Game.hpp  Window.hpp
src/engine/containers/: Geometry.hpp  Sprite.hpp
src/engine/systems/: BaseStateMachine.hpp  BaseStateMashine.hpp  BaseSystem.hpp  SystemInput.hpp  SystemMovementAndCollision.hpp  SystemRendering.hpp  SystemState.hpp
src/engine/world/: TileMap.hpp  World.hpp
src/engine/world/entity_components/: ComponentCameraTarget.hpp  ComponentCollider.hpp  ComponentInput.hpp  ComponentSprite.hpp  ComponentSpriteRendering.hpp
src/game/: level_one.hpp  player.hpp  player_one.hpp
src/will_engine/: Game.hpp  GpuAssetManager.hpp
src/will_engine/systems/: BaseSystem.hpp  SystemRendering.hpp
src/will_engine/world/: TileMap.hpp  World.hpp
src/will_engine/world/entity_components/: ComponentGeometry.hpp  ComponentPlayer.hpp  ComponentSprite.hpp  ComponentType.hpp
